--- a/Compiler-Test/pom.xml
+++ b/Compiler-Test/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.example</groupId>
-  <artifactId>Compliler-Test</artifactId>
+  <groupId>org.Junit</groupId>
+  <artifactId>Compiler-Test</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Compliler-Test</name>
+  <name>Compiler-Test</name>
   <url>http://maven.apache.org</url>
 
   <properties>
