--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ y.output
 *.tar.gz
 *.rar
 
+!JLex2.jar
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
